@@ -66,7 +66,8 @@ my $build = Module::Build->new(
 		'Test::Block'			=> '0.11',
 		'YAML'				=> '0.70',
 		'version'			=> '0.77',
-		'CPANPLUS'			=> '0.90',
+		'CPANPLUS::Configure'		=> '0.90',
+		'CPANPLUS::Backend'		=> '0.90',
 		'Devel::PPPort'			=> '3.19',
 		'Module::CoreList'		=> '2.23',
 		'Module::Pluggable'		=> '3.9',
