@@ -6,6 +6,7 @@
 # Avoid version control files.
 \B\.svn\b
 \B\.git\b
+^\.gitignore$
 
 # Avoid Makemaker generated and utility files.
 \bMakefile$
